--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
-node_modules
-note.txt
+
+
+node_modules/
+
+
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+pids
+*.pid
+*.seed
+*.pid.lock
+
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+/dist
+/build
+
+coverage/
+
+.vscode/
+.idea/
+*.swp
+
+.DS_Store
+Thumbs.db
+
+dump/
+
+*.cache/
