--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["server.ts"],
+  "include": ["server.ts","types"],
   "exclude": ["node_modules", "dist"]
 }
