--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "node dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js",
+    "start": "nodemon dist/server.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -17,19 +17,23 @@
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/validator": "^13.15.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "googleapis": "^167.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11",
     "validator": "^13.15.23"
   }
